# slidescore-python-sdk

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
examples/: add_anno2.py  anno_to_description.py  convert_2_anno2.py  create_student_accounts.py  get_screenshot.py  migrate_anno1_2_anno2_api.py  roundtrip_slidescore_txt_to_anno2.py  slide_analysis_fast.py  slide_analysis_simple.py  upload_anno2.py  webhook_samfast.py  webhook_slide_analysis.py  webhook_stardist.py
slidescore/: __init__.py  annotations.py  bin_data.py  client.py  errors.py  export_data.py  geometries.py  models.py  slidescore.py  types.py
slidescore/anno2/: __init__.py  _decoder.py  _encoder.py  _image_utils.py  _omega_codec.py  _polygon_codec.py  _polygon_container.py  _serializers.py  _simplify.py  _stores.py  _types.py  containers.py
slidescore/api/: __init__.py  annotations.py  scores.py  sessions.py  slides.py  studies.py  tiles.py  uploads.py
slidescore/cli/: bin_data.py
slidescore/exporters/: __init__.py  geojson.py  png.py  slidescore.py
slidescore/importers/: __init__.py  geojson.py  slidescore.py
slidescore/lib/: AnnoClasses.py  Decoder.py  Encoder.py  PolygonContainer.py  __init__.py  omega_encoder.py  polygon_encoder.py  simplify.py  utils.py
slidescore/parsers/: __init__.py  geojson.py  heatmap_tsv.py  slidescore_json.py  tsv.py
tests/: test_API_client.py  test_anno2.py  test_anno2_roundtrip.py  test_exporters.py  test_image_server.py  test_importers.py  test_models_and_http.py  test_upload_asap.py  test_upload_results.py
